# splime

./: .gitignore  .justfile  CHANGELOG.md  LICENSE  NOTICE  README.md  package.nix  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: migration-0.2.0.md  rfc-object-identity-reconcile.md  rfc-spl-api-reorg.md
docs/source/: conf.py  cookbook.rst  index.rst  owners-libraries-handles.rst
docs/source/api/: modules.rst  spl.core.entities.rst  spl.core.ir.rst  spl.core.rst  spl.daemon.repositories.rst  spl.daemon.routes.rst  spl.daemon.rst  spl.daemon.services.rst  spl.rst
src/: client.py  daemon_client.py
src/core/: __init__.py  common.py
src/core/entities/: distribution.py  function.py  node_function.py  node_remote.py
src/core/ir/: common.py  parse.py  unparse.py  utils.py
src/daemon/: cli.py  docker_environment.py  environment.py  remote_client.py  runtime_config.py  server.py  signature.py  store.py  worker.py
src/daemon/routes/: __init__.py
src/daemon/services/: __init__.py  sync.py
src/spl/: __init__.py  _client.py  _deprecate.py  _http.py  _owner_ref.py  _views.py  client.py  daemon_client.py  pipeline_widget.py  server_client.py
src/spl/core/: __init__.py  _common.py  adapter_compat.py  common.py  fingerprint.py  manifest.py  node_runtime.py  resume.py
src/spl/core/entities/: adapter.py  artifact.py  control.py  distribution.py  function.py  local_function.py  misc.py  module.py  node.py  node_function.py  node_remote.py  pipeline.py  scalar.py
src/spl/core/ir/: common.py  parse.py  unparse.py  utils.py
src/spl/daemon/: __init__.py  __main__.py  canonical.py  cli.py  client.py  docker_environment.py  docker_pool.py  doctor.py  environment.py  environment_base.py  heartbeat_service.py  interpreter_visibility.py  metadata.py  remote_client.py  run_lifecycle.py  run_progress.py  runtime_backend.py  runtime_config.py  runtime_dependencies.py  secret_store.py  server.py  server_connection.py  signature.py  spl_free_generator.py  spl_free_runner.py  storage_base.py  store.py  worker.py  worker_runtime_marker.py
src/spl/daemon/repositories/: __init__.py  env.py  library.py  object.py  run.py  server_connection.py  sync_event.py
src/spl/daemon/routes/: _helpers.py  artifacts.py  diagnostics.py  envs.py  libraries.py  objects.py  remote.py  runs.py  server_connections.py
src/spl/daemon/services/: sync.py
stubs/IPython/: __init__.pyi  display.pyi
tests/: conftest.py
tests/benchmarks/: bench_default_run_manifest.py  bench_json_native_shortcircuit.py
tests/compat/: test_yaml_corpus.py
tests/compat/corpus/: README.md
tests/compat/corpus/v02x/: adapter_alias_pipeline.yaml  artifact_ref.yaml  functional_node.yaml  multinode_dag.yaml  scalar_pipeline.yaml
tests/compat/corpus/v040/: README.md  adapter_halves_artifact_tag.yaml
tests/core/: test_adapter.py  test_adapter_compat.py  test_artifact.py  test_client_owner_library.py  test_cookbook_smoke.py  test_deprecations.py  test_fingerprint.py  test_function_serialization.py  test_http_helpers.py  test_local_function_inlining.py  test_node_runtime.py  test_notebook_fixture_shapes.py  test_pipeline_sdk_alignment.py  test_presentation_views.py  test_public_api.py  test_resume.py  test_run_manifest.py  test_run_progress_printer.py  test_scoped_signature.py  test_server_client.py  test_smoke.py  test_unified_result_access.py
tests/daemon/: conftest.py  test_daemon_endpoint.py  test_daemon_offline_mode.py  test_daemon_owner_handles.py  test_daemon_runtime_integration.py  test_docker_pool.py  test_doctor.py  test_environment.py  test_environment_base.py  test_object_identity.py  test_origin_stability.py  test_reconcile_lazy_yaml.py  test_remote_client.py  test_run_progress.py  test_runtime_backend.py  test_server_channel_breaker.py  test_server_channel_recovery.py  test_server_connection.py  test_server_retry_phase.py  test_server_state_probe.py  test_shared_default_e2e.py  test_signature_contract.py  test_spl_free_worker.py  test_store_repositories.py  test_test_isolation.py  test_worker_http_timeout.py  test_yaml_compat_corpus.py
tests/daemon/demo/: _bundle.yaml  mat_add.yaml  mat_det.yaml  mat_identity.yaml  mat_mul.yaml  test_pipeline.yaml
