[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spl"
version = "0.1.0"

description = "Smart PipeLime project"
readme = "README.md"
keywords = ["spl", "framework", "pipeline", "daemon-client"]

authors = [
  {name = "Yastrebov Kirill", email = "yastrebovks@gmail.com"}]

requires-python = ">= 3.13"

dependencies = [
  "pyyaml==6.0.3",
  "keyring==25.7.0",
  "spl-framework==0.1.0",
  "quart==0.20.0",
]

[project.optional-dependencies]
dev = [
  "ipykernel==7.3.0",
  "ipywidgets==8.1.8",
  "matplotlib==3.11.0",
  "seaborn==0.13.2",
  "nbformat==5.10.4",

  # example dependencies
  "numpy==2.5.0",
  "sympy==1.14.0",
  "scikit-learn==1.9.0",
  "xgboost-cpu==3.3.0",
  "dominate==2.9.1"]

test = [
  "pytest==9.1.1",
  "mypy==2.1.0"]

docs = [
  "sphinx==9.1.0",
  "sphinx-rtd-theme==3.1.0",
  "sphinx-autodoc-typehints==3.11.0"]

build = [
  "build==1.5.0",
  "pip-tools==7.5.3"]


[project.scripts]
spl-daemon = "spl.daemon.cli:main"


[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["spl*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.uv]
constraint-dependencies = [
  "pip<25.3"]


[tool.mypy]
mypy_path = "stubs"
namespace_packages = true
explicit_package_bases = false
implicit_optional = false
implicit_reexport = true
plugins = []
strict = true


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = []
ignore = []


[tool.pytest.ini_options]
addopts = "-raq --strict-markers"

python_files = ["test_*.py", "tests.py"]
testpaths = ["tests"]

log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

asyncio_mode = "strict"

markers = [
  "smoke"]
