[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splime"
version = "0.1.4"

description = "Reuse Python functions across projects without rewriting or redeploying them."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["splime", "spl", "python", "functions", "reuse", "nodes", "pipeline", "remote-execution", "registry"]

authors = [
  {name = "Yastrebov Kirill", email = "yastrebovks@gmail.com"}]

requires-python = ">= 3.13"

dependencies = [
  "pyyaml==6.0.3",
  "keyring==25.7.0",
  "quart==0.20.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "ipykernel==7.3.0",
  "ipywidgets==8.1.8",
  "matplotlib==3.11.0",
  "seaborn==0.13.2",
  "nbformat==5.10.4",

  # example dependencies
  "numpy==2.5.0",
  "sympy==1.14.0",
  "scikit-learn==1.9.0",
  "xgboost-cpu==3.3.0",
  "dominate==2.9.1"]

test = [
  "python-dotenv[cli]",
  "pyexpect",
  "mypy==2.1.0",
  "pytest==9.1.1",
  "pytest-asyncio"]

docs = [
  "sphinx==9.1.0",
  "sphinx-rtd-theme==3.1.0",
  "sphinx-autodoc-typehints==3.11.0"]

build = [
  "build==1.5.0",
  "pip-tools==7.5.3"]


[project.scripts]
spl-daemon = "spl.daemon.cli:main"


[project.urls]
Homepage = "https://splime.io"
Documentation = "https://splime.io"
Repository = "https://github.com/yastrebovks/splime"
Issues = "https://github.com/yastrebovks/splime/issues"


[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["spl*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.uv]
constraint-dependencies = [
  "pip<25.3"]


[tool.mypy]
mypy_path = "stubs"
namespace_packages = true
explicit_package_bases = false
implicit_optional = false
implicit_reexport = true
plugins = []
strict = true


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = []
ignore = []

# Scoped, justified allowances. These silence rules only where the pattern is
# legitimate for this code (infrastructure/daemon), not project-wide.
[tool.ruff.lint.per-file-ignores]
# pkgutil.extend_path runs before the package re-exports its public API,
# so the public imports intentionally sit below that call.
"src/spl/__init__.py" = ["E402"]
# The daemon is infrastructure: it spawns the interpreter/docker to build
# environments and run workers (S603/S607), opens controlled URLs (S310),
# binds its serve socket (S104), uses container-local /tmp (S108), builds SQL
# from fixed non-user identifiers (S608), keeps sentinel/env-name constants
# (S105), wraps transport errors without chaining (B904), does best-effort
# cleanup in except blocks (S110/S112), and names one internal control-flow
# signal (N818).
"src/spl/daemon/**" = [
    "S603", "S607", "S310", "S104", "S108", "S608",
    "S105", "B904", "S110", "S112", "N818",
]
# The CLI and daemon bootstrap print to the console on purpose.
"src/spl/daemon/cli.py" = ["T201"]
"src/spl/daemon/server.py" = ["T201"]
# Top-level HTTP clients use urllib against controlled endpoints and wrap
# transport errors into their own exception types.
"src/spl/daemon_client.py" = ["S310", "S110", "B904", "S105"]
"src/spl/server_client.py" = ["S310", "B904"]
# The notebook pipeline widget embeds long HTML/JS/CSS template lines.
"src/spl/pipeline_widget.py" = ["E501"]


[tool.pytest.ini_options]
addopts = "-raq --strict-markers"
pythonpath = ["src"]

python_files = ["test_*.py", "tests.py"]
testpaths = ["tests"]

log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

asyncio_mode = "strict"

markers = [
  "smoke"]
